# recoverly-sim

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml
examples/: basic.rs
scripts/: README.md  ji_predict.py
src/: lib.rs  main.rs
