[package]
name = "recoverly-sim"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Brain injury / concussion recovery simulation: kinematics + Ji Lab CNN (or custom lightweight PINN/GNN) → brain strain metrics → stochastic recovery trajectories and milestones"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/rmems/recoverly-sim"
keywords = ["tbi", "concussion", "brain-strain", "recovery-simulation", "ji-lab", "pinn", "gnn", "biomechanics"]
categories = ["science", "simulation"]

[lib]
name = "recoverly_sim"
path = "src/lib.rs"

[[bin]]
name = "recoverly-sim"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
csv = "1.3"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["std"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
